service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app-service
spec:
  selector:
    app: weather-app
  ports:
    - port: 80
      targetPort: 8081
      nodePort: 30923
  type: NodePort
