ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-app-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: weather.local-sky-network.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weather-app-service
            port:
              number: 80
